--- a/crypto_fusion_frontend/src/index.css
+++ b/crypto_fusion_frontend/src/index.css
@@ -118,3 +118,17 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.authContainer{
+  background-image: url("/public/authbg.jpg");
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  
+}
+
+.bgBlure{
+  backdrop-filter: blur(10px);
+}
