fix: copy button and auth form issues fixed

--- a/crypto_fusion_frontend/src/index.css
+++ b/crypto_fusion_frontend/src/index.css
@@ -120,7 +120,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .authContainer{
-  background-image: url("/public/authbg.jpg");
+  background-image: url("/authbg.jpg");
   height: 100vh;
   width: 100%;
   background-size: cover;
