--- a/crypto_fusion_frontend/src/index.css
+++ b/crypto_fusion_frontend/src/index.css
@@ -106,6 +106,11 @@
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
+
 /* For modern browsers */
 input[type="number"] {
   -moz-appearance: textfield; /* Firefox */
